--- a/css/templatemo-style.css
+++ b/css/templatemo-style.css
@@ -385,6 +385,7 @@ ul {
   background-color: #455871;
   padding: 30px;
   margin-top: 60px;
+  z-index: 100;
 }
 
 .about-content .about-box-text h4 {
@@ -399,12 +400,14 @@ ul {
   margin-top: 0px;
   margin-bottom: 15px;
   border-bottom: 2px solid #eee;
+  z-index: 100;
 }
 
 .about-content .about-box-text p {
   color: rgb(255, 255, 255);
   font-weight: bold;
   margin-bottom: 20px;
+  z-index: 100;
 }
 
 .about-content .primary-button a:hover {
